--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </p>
 <div id="toc"></div>
 <div id="charts"></div>
+<footer id="byline">
+  <p>By <a href="http://sean.mcgivern.me.uk/">Sean McGivern</a></p>
+</footer>
 <script type="module">
   import * as Plot from "https://cdn.jsdelivr.net/npm/@observablehq/plot@0.6/+esm";
 
